Fix Bugs. Upgrade to Java 23